# daonetes

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json
app/: .eslintrc.json  README.md  package.json  tsconfig.json
app/src/components/: DeploymentButton.tsx  DeploymentList.tsx  DeploymentToDevice.tsx  DeviceAdd.tsx  DeviceList.tsx  LayoutDefault.tsx  NewSpec.tsx  OnBoardingWizard.tsx  PublicKeyView.tsx  ScheduledDeploymentsList.tsx  SpecImportFromLibraryPopup.tsx  SpecLibraryList.tsx  SpecView.tsx  SpecsList.tsx  Waitlist.tsx  WorkGroupStatus.tsx  WorkgroupSettings.tsx  WorkgroupsList.tsx
app/src/hooks/: localhostDevice.ts  meshInfo.ts  proposer.tsx  selectedWorkgroup.tsx  validatorNetwork.ts  workgroupOwner.tsx
app/src/pages/: _app.tsx  about.tsx  dashboard.tsx  index.tsx  nodes.tsx  specs.tsx  workgroup.tsx
app/src/styles/: globals.scss
app/src/worknet/: createWorkgroup.ts  displays.tsx  governanceHelpers.ts  types.ts  worknet.ts
daoctl/: .goreleaser.yaml  Dockerfile  Dockerfile.signal-server  Makefile  README.md  daonetes.yaml  go.mod  go.sum  main.go
daoctl/cmd/: daolet.go  deploy.go  device.go  expose.go  group.go  info.go  main.go  service.go  spec.go  version.go
daoctl/cmd/service/: service_darwin.go  service_linux.go  service_unix.go  service_windows.go
daoctl/lib/options/: options.go
daoctl/lib/orchestrate/: compose.go  orchestrate.go
daoctl/lib/proxy/: api.go  device.go  proxy.go  (+2 more)
daoctl/signal-server/: main.go
daoctl/test/: key.json
programs/worknet/: Cargo.toml
programs/worknet/src/: lib.rs
tests/: worknet.ts
(+25 files in other folders)
