[package]
name = "worknet"
version = "0.1.0"
description = "Decentralized cloud built on Solana"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "worknet"

[features]
default = ["local-license-mint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
init-if-needed = []
local-license-mint = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-token = "3.3.0"
